--- a/earts/static/desk/video-player.html
+++ b/earts/static/desk/video-player.html
@@ -529,12 +529,12 @@
 		</div>
 	</div>
 	<!-- js -->
-	<script src="vendors/scripts/core.js"></script>
-	<script src="vendors/scripts/script.min.js"></script>
-	<script src="vendors/scripts/process.js"></script>
-	<script src="vendors/scripts/layout-settings.js"></script>
-	<script src="src/plugins/plyr/dist/plyr.js"></script>
-	<script src="https://cdn.shr.one/1.0.1/shr.js"></script>
+	<script src="{% static 'desk/vendors/scripts/core.jsv"></script>
+	<script src="{% static 'desk/vendors/scripts/script.min.jsv"></script>
+	<script src="{% static 'desk/vendors/scripts/process.js' %}"></script>
+	<script src="{% static 'desk/vendors/scripts/layout-settings.js' %}"></script>
+	<script src="{% static 'desk/src/plugins/plyr/dist/plyr.js' %}"></script>
+	<script src="{% static 'desk/https://cdn.shr.one/1.0.1/shr.js' %}"></script>
 	<script>
 		plyr.setup({
 			tooltips: {
